samples/_failures_safe/1761371442_647457_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e431a2c.c: In function ‘main’:
./samples/SAFE/__tmp_6e431a2c.c:146:24: error: missing terminating " character
  146 |                 printf("
      |                        ^
./samples/SAFE/__tmp_6e431a2c.c:146:17: error: expected expression at end of input
  146 |                 printf("
      |                 ^~~~~~
./samples/SAFE/__tmp_6e431a2c.c:146:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6e431a2c.c:146:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6e431a2c.c:146:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6e431a2c.c:146:17: error: expected declaration or statement at end of input
